--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,17 @@
             margin: 0;
             padding: 20px;
             min-height: 100vh;
-            background-image: url('https://www.transparenttextures.com/patterns/dark-wood.png');
-            background-size: cover;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'), url('https://www.transparenttextures.com/patterns/dark-wood.png');
+            background-size: cover, 50px 50px;
+            background-position: center, 0 0;
+            background-repeat: no-repeat, repeat;
             font-family: 'Cinzel', serif;
             color: #e0d8c3;
+            animation: bgShift 50s linear infinite;
+        }
+        @keyframes bgShift {
+            0% { background-position: center, 0 0; }
+            100% { background-position: center, 50px 50px; }
         }
         .main-container {
             display: flex;
@@ -27,6 +34,8 @@
             width: 100%;
             margin: 0 auto;
             gap: 20px;
+            overflow-y: auto;
+            min-height: calc(100vh - 40px);
         }
         .container {
             background: rgba(0, 0, 0, 0.7);
@@ -45,6 +54,7 @@
         .form-container {
             flex: 0 0 400px;
             margin: 0 auto;
+            overflow-y: auto;
         }
         .race-info {
             flex: 0 0 500px;
@@ -123,7 +133,7 @@
             margin: 10px 0;
         }
         .error {
-            color: #ff6b6b;
+ color: #ff6b6b;
             font-size: 1em;
             margin: 10px 0;
         }
@@ -208,11 +218,43 @@
             .main-container {
                 flex-direction: column;
                 align-items: center;
+                padding-bottom: 20px;
             }
             .class-info, .race-info {
                 margin-top: 20px;
                 margin-left: 0;
                 margin-right: 0;
+                max-width: 100%;
+            }
+            .form-container {
+                max-width: 100%;
+                overflow-y: auto;
+                max-height: none;
+                padding-bottom: 20px;
+            }
+            .form-container input,
+            .form-container select {
+                font-size: 14px;
+                padding: 6px;
+            }
+            .stat-container button {
+                width: 25px;
+                height: 25px;
+                font-size: 14px;
+            }
+            .stat-container input {
+                width: 50px;
+                font-size: 14px;
+            }
+            .stat-container label {
+                font-size: 1em;
+            }
+            .points {
+                font-size: 1em;
+            }
+            button[type="submit"] {
+                font-size: 14px;
+                padding: 8px;
             }
         }
     </style>
