--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -14,17 +14,12 @@
             margin: 0;
             padding: 20px;
             min-height: 100vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'), url('https://www.transparenttextures.com/patterns/dark-wood.png');
-            background-size: cover, 50px 50px;
-            background-position: center, 0 0;
-            background-repeat: no-repeat, repeat;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             font-family: 'Cinzel', serif;
             color: #e0d8c3;
-            animation: bgShift 50s linear infinite;
-        }
-        @keyframes bgShift {
-            0% { background-position: center, 0 0; }
-            100% { background-position: center, 50px 50px; }
         }
         .main-container {
             display: flex;
@@ -193,47 +188,69 @@
         const classAbilities = {
             'Воин': [
                 { name: 'Боевой стиль', description: 'Выберите стиль боя: Двуручное оружие (+2 к урону), Защита (+1 к КД) или Стрельба (+2 к атаке дальнобойным оружием).', type: 'passive' },
-                { name: 'Вторая атака', description: 'Вы можете атаковать дважды за одно действие атаки.', type: 'active' }
+                { name: 'Вторая атака', description: 'Вы можете атаковать дважды за одно действие атаки.', type: 'active' },
+                { name: 'Манёвр', description: 'Добавьте 1к8 к одной атаке, защите или проверке навыка (3/день).', type: 'active' },
+                { name: 'Стойкость', description: 'Получаете временные хиты, равные 5 + модификатор Телосложения (1/день).', type: 'active' }
             ],
             'Варвар': [
                 { name: 'Ярость', description: 'Входите в ярость, получая бонус +2 к урону и сопротивление физическому урону. 2/день.', type: 'active' },
-                { name: 'Неразрушимость', description: 'При получении смертельного урона остаётесь с 1 хитом (1/день).', type: 'passive' }
+                { name: 'Неразрушимость', description: 'При получении смертельного урона остаётесь с 1 хитом (1/день).', type: 'passive' },
+                { name: 'Бешеная атака', description: 'Атакуйте с преимуществом, но получаете штраф -5 к КД до следующего хода (2/день).', type: 'active' },
+                { name: 'Звериный инстинкт', description: 'Преимущество на проверки Инициативы и Восприятия.', type: 'passive' }
             ],
             'Монах': [
                 { name: 'Бездоспешный бой', description: 'Ваше КД равно 10 + модификатор Ловкости + модификатор Мудрости без доспехов.', type: 'passive' },
-                { name: 'Поражающий удар', description: 'Тратите 1 ки для нанесения дополнительного урона (1к4). 3/день.', type: 'active' }
+                { name: 'Поражающий удар', description: 'Тратите 1 ки для нанесения дополнительного урона (1к4). 3/день.', type: 'active' },
+                { name: 'Шаг ветра', description: 'Тратите 1 ки для удвоения скорости и прыжков на один ход (3/день).', type: 'active' },
+                { name: 'Уклонение', description: 'Тратите 1 ки для наложения эффекта Уклонения (спасброски Ловкости с преимуществом). 2/день.', type: 'active' }
             ],
             'Чародей': [
                 { name: 'Гибкие чары', description: 'Конвертируйте 2 очка чар в ячейку заклинаний 1 уровня (1/день).', type: 'active' },
-                { name: 'Огненный шар', description: 'Заклинание: наносит 8к6 урона огнём в радиусе 20 футов. Спасбросок Ловкости (Сл 13). 1/день.', type: 'active' }
+                { name: 'Огненный шар', description: 'Заклинание: наносит 8к6 урона огнём в радиусе 20 футов. Спасбросок Ловкости (Сл 13). 1/день.', type: 'active' },
+                { name: 'Магическая кровь', description: 'Добавьте +2 к спасброскам против магии.', type: 'passive' },
+                { name: 'Очарование', description: 'Заклинание: одна цель в радиусе 30 футов становится очарованной на 1 минуту. Спасбросок Мудрости (Сл 13). 2/день.', type: 'active' }
             ],
             'Друид': [
                 { name: 'Дикая форма', description: 'Превращайтесь в зверя (например, волка) с хп 15 и КД 13. 2/день.', type: 'active' },
-                { name: 'Лечащее слово', description: 'Заклинание: восстанавливает 1к4+4 хитов союзнику. 3/день.', type: 'active' }
+                { name: 'Лечащее слово', description: 'Заклинание: восстанавливает 1к4+4 хитов союзнику. 3/день.', type: 'active' },
+                { name: 'Природный барьер', description: 'Заклинание: создаёт стену из шипов в радиусе 15 футов, нанося 2к6 урона при прохождении. Спасбросок Ловкости (Сл 13). 2/день.', type: 'active' },
+                { name: 'Чувство природы', description: 'Преимущество на проверки Выживания и Природы.', type: 'passive' }
             ],
             'Волшебник': [
                 { name: 'Магический дротик', description: 'Заклинание: наносит 1к4+1 урона силой на расстоянии 120 футов. Без ограничений.', type: 'active' },
-                { name: 'Щит', description: 'Заклинание: +5 к КД до конца хода. 2/день.', type: 'active' }
+                { name: 'Щит', description: 'Заклинание: +5 к КД до конца хода. 2/день.', type: 'active' },
+                { name: 'Невидимость', description: 'Заклинание: становитесь невидимым на 1 час или до атаки/заклинания. 1/день.', type: 'active' },
+                { name: 'Арканное восстановление', description: 'Восстанавливайте ячейки заклинаний 1 уровня (1/день).', type: 'active' }
             ],
             'Жрец': [
                 { name: 'Канал божественности', description: 'Изгоняйте нежить или восстанавливайте 2к8 хитов союзникам в радиусе 30 футов. 2/день.', type: 'active' },
-                { name: 'Священное пламя', description: 'Заклинание: наносит 1к8 урона излучением. Спасбросок Ловкости (Сл 13). Без ограничений.', type: 'active' }
+                { name: 'Священное пламя', description: 'Заклинание: наносит 1к8 урона излучением. Спасбросок Ловкости (Сл 13). Без ограничений.', type: 'active' },
+                { name: 'Благословение', description: 'Заклинание: до 3 союзников в радиусе 30 футов получают +1к4 к атакам и спасброскам на 1 минуту. 2/день.', type: 'active' },
+                { name: 'Божественная защита', description: 'Получаете сопротивление к урону от заклинаний.', type: 'passive' }
             ],
             'Паладин': [
                 { name: 'Божественный удар', description: 'Добавляет 2к8 урона излучением к атаке оружием. 2/день.', type: 'active' },
-                { name: 'Лечение наложением рук', description: 'Восстанавливает до 5 хитов союзнику касанием. 1/день.', type: 'active' }
+                { name: 'Лечение наложением рук', description: 'Восстанавливает до 5 хитов союзнику касанием. 1/день.', type: 'active' },
+                { name: 'Аура защиты', description: 'Вы и союзники в радиусе 10 футов получаете +2 к спасброскам.', type: 'passive' },
+                { name: 'Карающий удар', description: 'Добавляет 3к8 урона излучением против нежити или демонов. 1/день.', type: 'active' }
             ],
             'Колдун': [
                 { name: 'Адский укор', description: 'Заклинание: наносит 2к10 урона силой при получении урона. 2/день.', type: 'active' },
-                { name: 'Чудотворство', description: 'Заклинание: создаёт незначительный магический эффект (звук, свет). Без ограничений.', type: 'active' }
+                { name: 'Чудотворство', description: 'Заклинание: создаёт незначительный магический эффект (звук, свет). Без ограничений.', type: 'active' },
+                { name: 'Тёмное зрение', description: 'Заклинание: видите в магической и обычной тьме на 60 футов. 2/день.', type: 'active' },
+                { name: 'Проклятье', description: 'Заклинание: цель получает -1к4 к атакам и спасброскам на 1 минуту. Спасбросок Мудрости (Сл 13). 2/день.', type: 'active' }
             ],
             'Следопыт': [
                 { name: 'Избранный враг', description: 'Получаете +2 к урону против выбранного типа врагов (например, зверей).', type: 'passive' },
-                { name: 'Меткий выстрел', description: 'Дальнобойная атака с +4 к попаданию. 3/день.', type: 'active' }
+                { name: 'Меткий выстрел', description: 'Дальнобойная атака с +4 к попаданию. 3/день.', type: 'active' },
+                { name: 'Ловушка', description: 'Создайте ловушку, наносящую 2к6 урона при срабатывании. Спасбросок Ловкости (Сл 13). 2/день.', type: 'active' },
+                { name: 'Чутьё следопыта', description: 'Преимущество на проверки Следопытства и Восприятия.', type: 'passive' }
             ],
             'Плут': [
                 { name: 'Удар исподтишка', description: 'Добавляет 2к6 урона при атаке с преимуществом или рядом с союзником.', type: 'active' },
-                { name: 'Скрытность', description: 'Получаете преимущество на проверки Скрытности. 3/день.', type: 'active' }
+                { name: 'Скрытность', description: 'Получаете преимущество на проверки Скрытности. 3/день.', type: 'active' },
+                { name: 'Ускользание', description: 'Избегайте урона от заклинаний или эффектов при успешном спасброске Ловкости (2/день).', type: 'active' },
+                { name: 'Ловкость рук', description: 'Преимущество на проверки Ловкости рук и Воровских инструментов.', type: 'passive' }
             ]
         };
 
