--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
             justify-content: center;
             align-items: flex-start;
             max-width: 1200px;
-            width: 100%;
+            width: 90%;
             margin: 0 auto;
+            padding: 0 20px;
             gap: 20px;
             overflow-y: auto;
             min-height: calc(100vh - 40px);
@@ -52,6 +53,7 @@
             flex: 0 0 400px;
             margin: 0 auto;
             overflow-y: auto;
+            box-sizing: border-box; /* Добавляем для корректного учёта padding */
         }
         .race-info {
             flex: 0 0 500px;
