--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,14 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            max-width: 1200px;
-            width: 90%;
+            max-width: 1400px;
+            width: 95%;
             margin: 0 auto;
-            padding: 0 20px;
-            gap: 20px;
+            padding: 20px;
+            gap: 30px;
             overflow-y: auto;
             min-height: calc(100vh - 40px);
+            flex-wrap: wrap; /* Добавляем для лучшей адаптации */
         }
         .container {
             background: rgba(0, 0, 0, 0.7);
@@ -50,10 +51,12 @@
             border-radius: 10px;
         }
         .form-container {
-            flex: 0 0 400px;
+            flex: 0 0 450px;
             margin: 0 auto;
+            padding: 20px;
             overflow-y: auto;
-            box-sizing: border-box; /* Добавляем для корректного учёта padding */
+            box-sizing: border-box;
+            min-width: 300px; /* Минимальная ширина для мобильных */
         }
         .race-info {
             flex: 0 0 500px;
@@ -97,8 +100,9 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            gap: 10px;
+            gap: 5px;
             margin: 10px 0;
+            flex-wrap: wrap; /* Позволяет перенос на мобильных */
         }
         .stat-container label {
             flex: 1;
@@ -106,18 +110,20 @@
             text-align: left;
         }
         .stat-container input {
-            width: 60px;
+            width: 70px;
             text-align: center;
+            min-width: 50px; /* Минимальная ширина для мобильных */
         }
         .stat-container button {
-            width: 30px;
-            height: 30px;
+            width: 35px;
+            height: 35px;
             background: #d4a017;
             color: black;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s;
+            font-size: 16px; /* Увеличиваем шрифт для кнопок */
         }
         .stat-container button:disabled {
             background: #666;
@@ -217,52 +223,56 @@
             .main-container {
                 flex-direction: column;
                 align-items: center;
-                padding-bottom: 20px;
+                padding: 10px;
             }
             .class-info, .race-info {
                 margin-top: 20px;
                 margin-left: 0;
                 margin-right: 0;
                 max-width: 100%;
+                padding: 10px;
             }
             .form-container {
                 max-width: 100%;
+                padding: 10px;
                 overflow-y: auto;
-                max-height: none;
-                padding-bottom: 20px;
+                min-width: 100%;
             }
             .form-container input,
             .form-container select {
                 font-size: 14px;
-                padding: 6px;
+                padding: 8px;
+            }
+            .stat-container {
+                gap: 5px;
             }
             .stat-container button {
-                width: 25px;
-                height: 25px;
+                width: 30px;
+                height: 30px;
                 font-size: 14px;
             }
             .stat-container input {
-                width: 50px;
+                width: 60px;
                 font-size: 14px;
             }
             .stat-container label {
                 font-size: 1em;
+                flex: 1;
             }
             .points {
                 font-size: 1em;
             }
             button[type="submit"] {
                 font-size: 14px;
-                padding: 8px;
+                padding: 10px;
             }
+        }
         @keyframes parallax {
             0% { background-position: center 0; }
             100% { background-position: center 50px; }
         }
         body {
             animation: parallax 20s linear infinite;
-        }
-        
         }
     </style>
 </head>
